--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,3 +1,15 @@
+.search-container{
+    background-color: gray;
+    text-align: center;
+    padding: 10px;
+}
+.search-container input{
+    width: 75%;
+    height: 30px;
+    border-radius: 7px;
+    border: none;
+}
+
 .shop-container{
     display: grid;
     grid-template-columns: 3fr 1fr;
